Issue with body padding resolved

--- a/Fall2024-Assignment1-tbclements/wwwroot/index.html
+++ b/Fall2024-Assignment1-tbclements/wwwroot/index.html
@@ -13,13 +13,13 @@
         <div>
             <div id="Banner">
                 <button class="navButton" onclick="loadLandingPage()">
-                    <p>1</p>
+                    <p>Landing Page</p>
                 </button>
                 <button class="navButton" onclick="loadTrailer()">
-                    <p>2</p>
+                    <p>Trailer</p>
                 </button>
                 <button class="navButton" onclick="loadSummary()">
-                    <p>3</p>
+                    <p>Summary</p>
                 </button>
                 
             </div>
