Boy I wan't meant to do front end

--- a/Fall2024-Assignment1-tbclements/wwwroot/index.html
+++ b/Fall2024-Assignment1-tbclements/wwwroot/index.html
@@ -24,7 +24,7 @@
                 
             </div>
             <div class="centerDiv" style="flex-grow : 1;">
-                <h1 id="title" class="firstPageItem">
+                <h1 id="Title" class="firstPageItem">
                     Adventure Time
                 </h1>
                 <img id="CoverArt" class="firstPageItem" src="https://media.wired.com/photos/5932661626780e6c04d2b642/191:100/w_1280,c_limit/AdventureTime.jpg">
