Made all one page with nav bar

--- a/Fall2024-Assignment1-tbclements/wwwroot/index.html
+++ b/Fall2024-Assignment1-tbclements/wwwroot/index.html
@@ -12,13 +12,13 @@
     <div class="flexMid">
         <div>
             <div id="Banner">
-                <button class="navButton" onclick="loadLandingPage()">
+                <button class="navButton" onclick="document.getElementById('Title').scrollIntoView({behavior: 'smooth', block:'end'});">
                     <p>Landing Page</p>
                 </button>
-                <button class="navButton" onclick="loadTrailer()">
+                <button class="navButton" onclick="document.getElementById('Trailer').scrollIntoView({behavior: 'smooth', block:'end'});">
                     <p>Trailer</p>
                 </button>
-                <button class="navButton" onclick="loadSummary()">
+                <button class="navButton" onclick="document.getElementById('Actors').scrollIntoView({behavior: 'smooth', block:'end'});">
                     <p>Summary</p>
                 </button>
                 
